<resources>
    <string name="app_name">DigitalesInventar</string>
    <string name="action_logout">Logout</string>
    <string name="headingDI">Digitales Inventar</string>
    <string name="login_message">You need to login to use Digitales Inventar.</string>
    <string name="categories">Kategorien </string>
    <string name="category">Kategorie</string>
    <string name="addOwnCategory">neue Kategorie</string>
    <string name="item_title">Name des Gegenstands</string>
    <string name="item_ts">Hinzugefügt am</string>
    <string name="item_value_euro">Wert des Gegenstands in €</string>
    <string name="item_value">Wert des Gegenstands</string>
    <string name="item_buy_date">Kaufdatum</string>
    <string name="least_items">Neueste: </string>
    <string name="sort_items">Sortieren nach: </string>
    <string name="editCategories">Kategorien bearbeiten</string>
    <string name="cat1">Unterhaltung </string>
    <string name="cat2">Haushalt</string>
    <string name="cat3">Einrichtung</string>
    <string name="cat4">Hobby</string>
    <string name="cat5">Werkzeug</string>
    <string name="cat6">Weitere..</string>
    <string name="item_location">Ort des Gegenstands</string>
    <string name="item_category">Kategorie des Gegenstands</string>
    <string name="save">Sichern</string>
    <string name="edit">Ändern</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete">Löschen</string>
    <string name="back">Zurück</string>
    <string name="add">Hinzufügen</string>
    <string name="remove">Entfernen</string>
    <string name="search">Suche</string>
    <string name="search_hint">Eintippen...</string>
    <string name="searchresult">Suchergebnis:</string>
    <string name="tab_text_1">Items</string>
    <string name="tab_text_2">Kategorien</string>
    <string name="tab_text_3">Orte</string>
    <string name="multiselect"> Items ausgewählt</string>
    <string-array name="categories_spinner">
        <item>Unterhaltungselektronik</item>
        <item>Haushaltsgegenstände</item>
        <item>Einrichtung</item>
        <item>Hobby</item>
        <item>Werkzeug</item>
    </string-array>
    <string-array name="sort_by_spinner_small">
        <item>Name aufsteigend</item>
        <item>Name absteigend</item>
    </string-array>
    <string-array name="sort_by_spinner_big">
        <item>Neueste</item>
        <item>Älteste</item>
        <item>Name aufsteigend</item>
        <item>Name absteigend</item>
    </string-array>
</resources>
