<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:id="@+id/headerEditCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/toolbar">

        <TextView
            android:id="@+id/textViewEditCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editCategories"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/removeCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_below="@+id/headerEditCategories">

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2  "/>
        <Button
            android:id="@+id/removeCategoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/removeCategory">
        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/space">

        <TextView
            android:id="@+id/textViewAddCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addOwnCategory" />
        <EditText
            android:id="@+id/editTextOwnCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/addCatSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/addLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="horizontal">
        <Button
        android:id="@+id/addCatCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/back"
            android:layout_gravity="bottom"/>
    </LinearLayout>

</LinearLayout>