<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/imgViewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="40dp">

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="12dp"
            android:id="@+id/view1"
            app:cardCornerRadius="100dp">

            <ImageView
                android:layout_height="200dp"
                android:layout_width="200dp"
                android:id="@+id/imgView"
                android:src="@drawable/img_holder"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/view2"
        android:layout_below="@+id/imgViewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:contentPadding="20dp"
        app:cardBackgroundColor="@color/backgroundOverlay"
        app:cardCornerRadius="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/NameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Name_Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:text="@string/item_title"/>

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_title"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/TimeInfo"
            android:layout_below="@+id/NameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Time_Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/item_ts"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_ts"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/CategoryInfo"
            android:layout_below="@+id/TimeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Category_Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:text="@string/category"/>

            <TextView
                android:id="@+id/Category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LocationInfo"
            android:layout_below="@+id/CategoryInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Location_Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/item_location"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_location"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/BuyDateInfo"
            android:layout_below="@+id/LocationInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/BuyDate_Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/item_buy_date"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/BuyDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_buy_date"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ValueInfo"
            android:layout_below="@+id/BuyDateInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Value_Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/item_value"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_value"/>
        </LinearLayout>
        <Button
            android:id="@+id/editItemButton"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:layout_alignParentEnd="true"

            android:background="@drawable/brush30px"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/backButton"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:background="@drawable/back74x50"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</RelativeLayout>
</ScrollView>