<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp">


        <androidx.cardview.widget.CardView
            android:layout_width="155dp"
            android:layout_height="155dp"
            app:cardCornerRadius="250dp">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:drawable="@drawable/imgholder"/>
        </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/imgButtons"
        android:layout_below="@+id/addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:background="@drawable/addphotofromcam"/>

    <ImageButton
        android:id="@+id/pickerButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/addphotofromgallery"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addName"
        android:layout_below="@+id/imgButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_title"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemName"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addCategory"
        android:layout_below="@+id/addName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addCategory2"
        android:layout_below="@+id/addCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp">

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/addCatButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/postadd"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addLocation"
        android:layout_below="@+id/addCategory2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_location"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemLocation" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addBuyDate"
        android:layout_below="@+id/addLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textViewBuyDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_buy_date"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/addBuyDate2"
        android:layout_below="@+id/addBuyDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/itemBuyDate"
            android:layout_width="286dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/addBuyDateButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/postadd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addValue"
        android:layout_below="@+id/addBuyDate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textViewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_value"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemValue" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/addValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addItemCancel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/cancel"/>

        <Button
            android:id="@+id/addItemSave"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/save" />
    </LinearLayout>
</RelativeLayout>