<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:elevation="12dp"
            android:id="@+id/view2"
            app:cardCornerRadius="80dp">

            <ImageView
                android:layout_height="160dp"
                android:layout_width="160dp"
                android:id="@+id/imgView"
                android:src="@drawable/img_holder"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="-60dp"
            android:elevation="20dp"
            android:layout_gravity="end|bottom"
            android:background="@drawable/camera30px" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addName"
        android:layout_below="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/itemName"
            android:textStyle="bold"
            android:textColor="@color/mediumEmphasized"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/itemTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/disabled"
            android:text="@string/item_ts"/>
    </LinearLayout>

 <!--   <LinearLayout
        android:id="@+id/TimeInfo"
        android:layout_below="@+id/addName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_ts"
            android:textStyle="bold"
            android:textColor="@color/mediumEmphasized"/>

        <TextView
            android:id="@+id/itemTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
-->

    <LinearLayout
        android:id="@+id/CategoryHeading"
        android:layout_below="@+id/addName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp">

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textStyle="bold"
        android:textColor="@color/mediumEmphasized"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addCategory"
        android:layout_below="@+id/CategoryHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ownCategory"
        android:layout_below="@+id/addCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addLocation"
        android:layout_below="@+id/ownCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_location"
            android:textStyle="bold"
            android:textColor="@color/mediumEmphasized"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemLocation"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addBuyDate"
        android:layout_below="@+id/addLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textViewBuyDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_buy_date"
            android:textStyle="bold"
            android:textColor="@color/mediumEmphasized"/>
        <Button
            android:id="@+id/addBuyDateButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="2dp"
            android:background="@drawable/brush30px" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addBuyDate2"
        android:layout_below="@+id/addBuyDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <TextView
            android:id="@+id/itemBuyDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_buy_date"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addValue"
        android:layout_below="@+id/addBuyDate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textViewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_value_euro"
            android:textStyle="bold"
            android:textColor="@color/mediumEmphasized"/>
        <EditText
            android:id="@+id/itemValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/addValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/addItemCancel"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:background="@drawable/back74x50"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/addItemSave"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:background="@drawable/tick64x50px"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</RelativeLayout>
</ScrollView>